# CIDS

./: .gitignore  README.md
backend/: app.py  derive.py  inference_cnn.py  inference_lstm.py  inference_rf.py  pyproject.toml  requirements.txt  xgboost_inference.py
backend/models/: nf_scaler.pkl
backend/models/cnn/: cnn_model.h5
backend/models/lstm/: lstm_model.h5
backend/models/rf/: rf_top_features.pkl
backend/models/xgb/: nf_top_features.pkl
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/inference/: page.tsx
frontend/app/manual-entry/: page.tsx
frontend/app/monitor/: page.tsx
frontend/components/: columns-dialog.tsx  file-upload-section.tsx  header.tsx  hero-section.tsx  manual-entry-form.tsx  model-selector.tsx
frontend/components/data/: sample-csv.ts
frontend/components/ui/: button.tsx
frontend/styles/: globals.css
